# DPDrone

./: LICENSE  README.md
DPdrone_ws/src/communication/: CMakeLists.txt  package.xml
DPdrone_ws/src/communication/src/: drone_communication.cpp
DPdrone_ws/src/control/: CMakeLists.txt  package.xml
DPdrone_ws/src/control/src/: ego_ctrl_v1.cpp  fuel_ctrl_v1.cpp  vins_test.cpp
config/FUEL/: exploration.launch
config/ego/: simple_run.launch
config/vins/px4/: px4_indoor1_cam1.yaml  px4_indoor1_stereo_imu_config.yaml
shfiles/: vins_ego_test.sh  vins_fuel_test.sh  vins_test.sh
